Ticket #1597 (new defect)

Opened 3 months ago

Last modified 3 months ago

xspf track without location element causes choking on metadata fields

Reported by: lucasgonze Assigned to:
Priority: normal Milestone: 1.0.0 bugs
Component: Playlist Version: master
Severity: normal Keywords:
Cc: Platform(s): all
Difficulty: easy Work status: Not started

Description (Last modified by courmisch)

The XSPF emitted by Last.fm doesn't have URLs for media, so there are no location elements in the track elements. This is valid and sensible XSPF.

This triggers a bug in VLC. The bug is to throw an error complaining about any metadata fields in the track.

This XSPF will work fine:

<?xml version="1.0" encoding="UTF-8"?>
<playlist version="1" xmlns="http://xspf.org/ns/0/">
 <trackList>
  <track>
    <location>http://mediaplayer.yahoo.com/example1.mp3</location>
    <title>Roll With It</title>
  </track>
 </trackList>
</playlist>

But this XSPF will throw an error:

<?xml version="1.0" encoding="UTF-8"?>
<playlist version="1" xmlns="http://xspf.org/ns/0/">
 <trackList>
  <track>
    <title>Roll With It</title>
  </track>
 </trackList>
</playlist>

These are the errors in the message window:

playlist: an item hasn't been created yet <title>
playlist: expected: </trackList>, found: </track>

Change History

05/30/08 10:13:53 changed by funman

  • status changed from new to assigned.
  • difficulty changed from unknown to easy.
  • version set to master.
  • milestone set to 0.9.0 bugs.

06/22/08 16:03:44 changed by courmisch

  • status changed from assigned to new.
  • owner deleted.
  • description changed.