Don't require location under track element in xspf-playlist. Should fix #1597